--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ ext {
     user_github_name = System.getenv('USER_GITHUB_NAME')
     user_github_token = System.getenv('USER_GITHUB_TOKEN')
 
+    // GitLab
+    user_gitlab_name = System.getenv('USER_GITLAB_NAME')
+    user_gitlab_token = System.getenv('USER_GITLAB_TOKEN')
+
     // Organization
     organization_id = System.getenv('ORGANIZATION_ID')
     organization_name = System.getenv('ORGANIZATION_NAME') ?: 'MCEngine-Extension'
